@@ -44,16 +44,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Collections
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|HashMap
 import|;
 end_import
@@ -131,18 +121,6 @@ operator|.
 name|concurrent
 operator|.
 name|ExecutionException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ExecutorCompletionService
 import|;
 end_import
 
@@ -645,16 +623,10 @@ name|httpShardHandlerFactory
 expr_stmt|;
 name|completionService
 operator|=
-operator|new
-name|ExecutorCompletionService
-argument_list|<
-name|ShardResponse
-argument_list|>
-argument_list|(
 name|httpShardHandlerFactory
 operator|.
-name|commExecutor
-argument_list|)
+name|newCompletionService
+argument_list|()
 expr_stmt|;
 name|pending
 operator|=
@@ -788,78 +760,11 @@ condition|)
 block|{
 name|urls
 operator|=
-name|StrUtils
+name|httpShardHandlerFactory
 operator|.
-name|splitSmart
+name|makeURLList
 argument_list|(
 name|shard
-argument_list|,
-literal|"|"
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-comment|// convert shard to URL
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|urls
-operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|urls
-operator|.
-name|set
-argument_list|(
-name|i
-argument_list|,
-name|httpShardHandlerFactory
-operator|.
-name|scheme
-operator|+
-name|urls
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-comment|//
-comment|// Shuffle the list instead of use round-robin by default.
-comment|// This prevents accidental synchronization where multiple shards could get in sync
-comment|// and query the same replica at the same time.
-comment|//
-if|if
-condition|(
-name|urls
-operator|.
-name|size
-argument_list|()
-operator|>
-literal|1
-condition|)
-name|Collections
-operator|.
-name|shuffle
-argument_list|(
-name|urls
-argument_list|,
-name|httpShardHandlerFactory
-operator|.
-name|r
 argument_list|)
 expr_stmt|;
 name|shardToURLs
@@ -1126,19 +1031,11 @@ name|rsp
 init|=
 name|httpShardHandlerFactory
 operator|.
-name|loadbalancer
-operator|.
-name|request
-argument_list|(
-operator|new
-name|LBHttpSolrServer
-operator|.
-name|Req
+name|makeLoadBalancedRequest
 argument_list|(
 name|req
 argument_list|,
 name|urls
-argument_list|)
 argument_list|)
 decl_stmt|;
 name|ssr
