@@ -22,9 +22,39 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|MalformedURLException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 
@@ -46,7 +76,79 @@ name|util
 operator|.
 name|concurrent
 operator|.
-name|*
+name|ArrayBlockingQueue
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|BlockingQueue
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|CompletionService
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorCompletionService
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|SynchronousQueue
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ThreadPoolExecutor
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
 import|;
 end_import
 
@@ -61,6 +163,22 @@ operator|.
 name|client
 operator|.
 name|HttpClient
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|SolrServerException
 import|;
 end_import
 
@@ -97,6 +215,24 @@ operator|.
 name|impl
 operator|.
 name|LBHttpSolrServer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|QueryRequest
 import|;
 end_import
 
@@ -170,6 +306,22 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|StrUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|core
 operator|.
 name|PluginInfo
@@ -187,22 +339,6 @@ operator|.
 name|util
 operator|.
 name|DefaultSolrThreadFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|util
-operator|.
-name|plugin
-operator|.
-name|PluginInfoInitialized
 import|;
 end_import
 
@@ -234,6 +370,16 @@ name|HttpShardHandlerFactory
 extends|extends
 name|ShardHandlerFactory
 implements|implements
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|plugin
+operator|.
 name|PluginInfoInitialized
 block|{
 DECL|field|log
@@ -258,6 +404,7 @@ comment|//
 comment|// Consider CallerRuns policy and a lower max threads to throttle
 comment|// requests at some point (or should we simply return failure?)
 DECL|field|commExecutor
+specifier|private
 name|ThreadPoolExecutor
 name|commExecutor
 init|=
@@ -298,6 +445,7 @@ name|HttpClient
 name|defaultClient
 decl_stmt|;
 DECL|field|loadbalancer
+specifier|private
 name|LBHttpSolrServer
 name|loadbalancer
 decl_stmt|;
@@ -354,7 +502,7 @@ init|=
 literal|false
 decl_stmt|;
 DECL|field|scheme
-specifier|public
+specifier|private
 name|String
 name|scheme
 init|=
@@ -362,6 +510,7 @@ literal|"http://"
 decl_stmt|;
 comment|//current default values
 DECL|field|r
+specifier|private
 specifier|final
 name|Random
 name|r
@@ -978,6 +1127,157 @@ name|e
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|/**    * Makes a request to one or more of the given urls, using the configured load balancer.    *    * @param req The solr search request that should be sent through the load balancer    * @param urls The list of solr server urls to load balance across    * @return The response from the request    */
+DECL|method|makeLoadBalancedRequest
+specifier|public
+name|LBHttpSolrServer
+operator|.
+name|Rsp
+name|makeLoadBalancedRequest
+parameter_list|(
+specifier|final
+name|QueryRequest
+name|req
+parameter_list|,
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|urls
+parameter_list|)
+throws|throws
+name|SolrServerException
+throws|,
+name|IOException
+block|{
+return|return
+name|loadbalancer
+operator|.
+name|request
+argument_list|(
+operator|new
+name|LBHttpSolrServer
+operator|.
+name|Req
+argument_list|(
+name|req
+argument_list|,
+name|urls
+argument_list|)
+argument_list|)
+return|;
+block|}
+comment|/**    * Creates a randomized list of urls for the given shard.    *    * @param shard the urls for the shard (minus "http://"), separated by '|'    * @return A list of valid urls (including protocol) that are replicas for the shard    */
+DECL|method|makeURLList
+specifier|public
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|makeURLList
+parameter_list|(
+name|String
+name|shard
+parameter_list|)
+block|{
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|urls
+init|=
+name|StrUtils
+operator|.
+name|splitSmart
+argument_list|(
+name|shard
+argument_list|,
+literal|"|"
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+comment|// convert shard to URL
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|urls
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|urls
+operator|.
+name|set
+argument_list|(
+name|i
+argument_list|,
+name|scheme
+operator|+
+name|urls
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|//
+comment|// Shuffle the list instead of use round-robin by default.
+comment|// This prevents accidental synchronization where multiple shards could get in sync
+comment|// and query the same replica at the same time.
+comment|//
+if|if
+condition|(
+name|urls
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|1
+condition|)
+name|Collections
+operator|.
+name|shuffle
+argument_list|(
+name|urls
+argument_list|,
+name|r
+argument_list|)
+expr_stmt|;
+return|return
+name|urls
+return|;
+block|}
+comment|/**    * Creates a new completion service for use by a single set of distributed requests.    */
+DECL|method|newCompletionService
+specifier|public
+name|CompletionService
+name|newCompletionService
+parameter_list|()
+block|{
+return|return
+operator|new
+name|ExecutorCompletionService
+argument_list|<
+name|ShardResponse
+argument_list|>
+argument_list|(
+name|commExecutor
+argument_list|)
+return|;
 block|}
 block|}
 end_class
